Allow content-negotiation for results endpoint
